--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "@angular/core": "~13.2.4",
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.2.4",
-    "@angular/material": "^13.3.2",
+    "@angular/material": "^13.3.4",
     "@angular/platform-browser": "~13.2.4",
     "@angular/platform-browser-dynamic": "~13.2.4",
     "@angular/router": "~13.2.4",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "angular-animate": "^1.8.3",
     "bootstrap": "^5.1.3",
     "mdb-angular-ui-kit": "file:mdb-angular-ui-kit-2.0.0.tgz",
     "mdb-ui-kit": "^3.11.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -41,6 +41,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "tslib": "^2.4.0",
     "typescript": "~4.5.5"
   }
 }
