--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,12 @@
     "importHelpers": true,
     "strict":false,
     "noImplicitReturns": false,
-    "target": "es2017",
-    "module": "es2020",
+    "target": "es2015",
+    "module": "commonjs",
     "lib": [
-      "es2018",
-      "dom"
+      "es2016",
+      "DOM",
+
     ]
   }
 }
